fix the gap

--- a/styles/pages/landingPage.module.scss
+++ b/styles/pages/landingPage.module.scss
@@ -15,6 +15,7 @@
         margin-top: 130px;
         margin-right: auto;
         margin-left: auto;
+        gap: 20px;
 
         .grid-item {
             margin-left: 20px;
@@ -82,7 +83,8 @@
         margin-top: 50px;
         margin-right: auto;
         margin-left: auto;
-
+        gap: 20px;
+        
         .grid-item {
             margin-left: 20px;
         }
